--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "vscode-phpstan",
-    "displayName": "PhpStan static analysis",
-    "description": "PHPStan support in VSCode",
-    "version": "0.2.0",
-    "publisher": "Mandy91",
+    "displayName": "PHPStan static analysis",
+    "description": "PHPStan support in Visual Studio Code",
+    "version": "0.1.0",
+    "publisher": "Milos Levacic",
     "engines": {
         "vscode": "^1.23.1"
     },
@@ -17,7 +17,7 @@
     ],
     "repository": {
         "type": "github",
-        "url": "https://github.com/mandy91/vscode-phpstan"
+        "url": "https://github.com/levacic/vscode-phpstan"
     },
     "main": "./out/extension",
     "scripts": {
